--- a/public/index.html
+++ b/public/index.html
@@ -88,7 +88,7 @@
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script
       async
-      src="https://www.googletagmanager.com/gtag/js?id=UA-135618960-2"
+      src="https://www.googletagmanager.com/gtag/js?id=G-3YK2M8YSK0"
     ></script>
     <script>
       window.dataLayer = window.dataLayer || [];
@@ -97,9 +97,8 @@
       }
       gtag("js", new Date());
 
-      gtag("config", "UA-135618960-2");
+      gtag("config", "G-3YK2M8YSK0");
     </script>
-
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/gh/FortAwesome/Font-Awesome@5.15.4/css/all.min.css"
@@ -116,14 +115,7 @@
     -->
   </head>
   <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-3YK2M8YSK0"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
 
-  gtag('config', 'G-3YK2M8YSK0');
-</script>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
