--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     <meta name="title" content="Sai Nikhil Reddy Vatti | Portfolio" />
     <meta
       name="description"
-      content="Software Developer Portfolio Template that helps you showcase your work and skills as a software developer"
+      content="Software Developer with a passion for developing innovative programs that expedite the efficiency and effectiveness of organizational success."
     />
 
     <!-- Open Graph / Facebook -->
@@ -20,7 +20,7 @@
     <meta property="og:title" content="Sai Nikhil Reddy Vatti | Portfolio" />
     <meta
       property="og:description"
-      content="Software Developer Portfolio Template that helps you showcase your work and skills as a software developer"
+      content="Software Developer with a passion for developing innovative programs that expedite the efficiency and effectiveness of organizational success."
     />
     <!-- Link to a hosted image -->
     <!-- <meta property="og:image" content=""> -->
@@ -34,7 +34,7 @@
     />
     <meta
       property="twitter:description"
-      content="Software Developer Portfolio Template that helps you showcase your work and skills as a software developer"
+      content="Software Developer with a passion for developing innovative programs that expedite the efficiency and effectiveness of organizational success."
     />
     <!-- Link to a hosted image -->
     <!-- <meta property="twitter:image" content=""> -->
